# mini-project-holiday-planner

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  commitlint.config.js  docker-compose.yml  manage.py  pyproject.toml
triptuner/: asgi.py  manage.py  models.py  serializers.py  settings.py  tests.py  urls.py  views.py  wsgi.py
triptuner/migrations/: 0001_initial.py  0002_itinerary_itinerarydestination_and_more.py
triptuner/triptuner/: settings.py  tests.py  urls.py  views.py
